--- a/FILE5/index.html
+++ b/FILE5/index.html
@@ -7,7 +7,7 @@
         <style>
             body { background-color: rgb(36, 39, 44); margin: 0; padding: 0; }
             .x { display: flex; align-items: center; justify-content: center; height: 90vh; }
-            img { max-width: 30%; height: auto; margin-right: 0px; }
+	    img { max-width: 450px; height: auto; margin-right: 0px;}
             h1 { color: rgb(206, 208, 215); font-size: 40px; font-family: 'Anton', sans-serif; text-align: center; letter-spacing: 10px; text-shadow: 0px 5px 10px #000000; margin-top: 0px; margin-right: 0px; font-weight: bold; }
             .c { font-family: 'Courier New', Courier, monospace; color:rgb(206, 208, 215); font-size: 10px; text-align: left; margin-top: 0px; }
             a { font-family: 'Courier New', Courier, monospace; color:rgb(206, 208, 215); font-size: 10px; letter-spacing: 5px; text-decoration: none; text-align: center; margin-bottom: 0px; }
@@ -20,6 +20,6 @@
             <img src="https://i.ibb.co/gWDJgyR/x.png"><br>
         <h1>Hacked By LeetGh0sts Squ4d</h1>
         </div>
-        <div class="link">[  <a href="https://twitter.com/leetgh0sts" target="_blank">https://twitter.com/leetgh0sts</a> | <a href="https://t.me/leetgh0sts" target="_blank">https://t.me/LeetGh0stsSqu4d</a> | <a href="https://www.facebook.com/leetgh0sts.phtml" target="_blank">https://www.facebook.com/leetgh0sts.phtml</a>  ] </div>
+        <div class="link">[ <a href="https://twitter.com/leetgh0sts" target="_blank"> https://twitter.com/leetgh0sts </a> | <a href="https://t.me/leetgh0s7s" target="_blank"> https://t.me/leetgh0s7s </a> | <a href="https://www.facebook.com/leetgh0sts.phtml" target="_blank"> https://www.facebook.com/leetgh0sts.phtml </a>  ] </div>
     </body>
 </html>
