--- a/FILE5/index.html
+++ b/FILE5/index.html
@@ -8,18 +8,28 @@
         <style>
             body { background-color: rgb(36, 39, 44); margin: 0; padding: 0; }
             .x { display: flex; align-items: center; justify-content: center; height: 90vh; }
-	    img { max-width: 450px; height: auto; margin-right: 0px;}
-            h1 { color: rgb(206, 208, 215); font-size: 40px; font-family: 'Anton', sans-serif; text-align: center; letter-spacing: 10px; text-shadow: 0px 5px 10px #000000; margin-top: 0px; margin-right: 0px; font-weight: bold; }
+	        img { max-width: 450px; height: auto; margin-right: 0px;}
+            .main { color: rgb(206, 208, 215); font-family: 'Anton', sans-serif; text-shadow: 0px 5px 10px #000000; text-align: center; margin-top: 0px; margin-right: 0px; }
+            h1 { font-size: 45px; letter-spacing: 8px; }
+            p { font-size: 17px; font-family: 'Anton', sans-serif; letter-spacing: 1px;}
             .c { font-family: 'Courier New', Courier, monospace; color:rgb(206, 208, 215); font-size: 10px; text-align: left; margin-top: 0px; }
             a { font-family: 'Courier New', Courier, monospace; color:rgb(206, 208, 215); font-size: 10px; letter-spacing: 5px; text-decoration: none; text-align: center; margin-bottom: 0px; }
             .link { color:rgb(206, 208, 215) ; text-align: center; margin-bottom: 0px; }
         </style>
-    </head>
+            </head>
     <body>
         <div class="c">since @ 2021</div>
         <div class="x">
             <img src="https://i.ibb.co/gWDJgyR/x.png"><br>
-        <h1>Hacked By LeetGh0sts Squ4d</h1>
+            <div class="main">
+                <h1>Hacked By LeetGh0sts Squ4d</h1>
+                <p>Without the presence of shadows,<br>
+                the true essence and completeness of light cannot be fully appreciated or understood.<br>
+                We are LeetGh0sts Squ4d<br>
+                We are the evolution of cyberspace.<br>
+                We navigate digital shadows and illuminations, seeking true understanding in this interconnected realm.<br>
+                </p>
+            </div>
         </div>
         <div class="link">[ <a href="https://twitter.com/leetgh0sts" target="_blank"> https://twitter.com/leetgh0sts </a> | <a href="https://t.me/leetgh0s7s" target="_blank"> https://t.me/leetgh0s7s </a> | <a href="https://www.facebook.com/leetgh0sts.phtml" target="_blank"> https://www.facebook.com/leetgh0sts.phtml </a>  ] </div>
     </body>
